[package]
name = "webboiler"
version = "0.1.0"
authors = ["Bob <shiftsource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "0.4"
actix-web = "1.0"
futures = "0.1"
slog = "2.5"
slog-async = "2.3"
slog-json = "2.3"
